# flippy-anim

./: .gitignore  README.md  pyproject.toml  setup.py
src/flippyanim/: __init__.py  compress.js  compress.py  compress_.py  convert.py  decompress.js  load.py
