[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flippyanim"
version = "0.0.1"
authors = [
	{ name="Isla Partridge" },
	{ name="Aya Partridge" },
]
description = "FlipAnim reverse engineering project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: GNU GENERAL PUBLIC LICENSE",
	"Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://github.com/IslaTheCutie/flippy-anim"
