[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flippyanim"
version = "0.0.1"
authors = [
	{ name="Isla Partridge" },
	{ name="Aya Partridge" },
]
description = "FlipAnim reverse engineering project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
]
dependencies = [
	'js2py >= 0.74',
]
[project.optional-dependencies]
dependencies = [
	'svg.py >= 1.4.1',
]

[project.urls]
"Repository" = "https://github.com/IslaTheCutie/flippy-anim"
